# lavka-attendance

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  package-lock.json  pyproject.toml  restart_app.sh  start-prod.sh  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
backend/: attendance.py  auth.py  config.py  database.py  dependencies.py  main.py  redis_client.py  utils_helper.py
backend/admin_endpoint_v1/: crud.py  dependencies.py  schemas.py  utils.py  views.py
backend/audit/: __init__.py  service.py
backend/base_endpoint_v1/: crud.py  schemas.py  views.py
backend/external_auth_endpoint_v1/: schemas.py  views.py
backend/group_endpoint_v1/: crud.py  views.py
backend/markin_endpoint_v1/: crud.py  schemas.py  views.py
backend/middleware/: __init__.py  rate_limiter.py
backend/mirea_api/: get_acs_events.py  get_cookies.py  get_groups.py  get_lesson_attendance.py  get_lessons_calendar.py  get_me_info.py  get_schedule.py  get_user_points.py  lessons_cost_cache.py  protobuf_decoder.py  protobuf_schemas.py  self_approve_attendance.py
backend/nfc_endpoint_v1/: schemas.py  views.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  EXTERNAL_AUTH_API.md  NFC_API.md  SCREENSHOTS.md
telegram-mini-app/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs
(+72 files in other folders)
